--- a/admin/package.json
+++ b/admin/package.json
@@ -8,13 +8,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "pinia": "^2.0.14",
     "vue": "^3.2.25",
     "vue-router": "4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
+    "autoprefixer": "^10.4.7",
     "naive-ui": "^2.30.4",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.3",
     "typescript": "^4.5.4",
     "vfonts": "^0.0.3",
     "vite": "^2.9.9",
