--- a/admin/package.json
+++ b/admin/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "dayjs": "^1.11.3",
     "pinia": "^2.0.14",
     "vue": "^3.2.25",
     "vue-router": "4"
