--- a/admin/package.json
+++ b/admin/package.json
@@ -8,23 +8,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^0.27.2",
+    "axios": "^1.4.0",
     "calendar-graph": "^1.0.1",
-    "dayjs": "^1.11.3",
+    "dayjs": "^1.11.9",
     "mavon-editor": "3.0.0-beta",
-    "pinia": "^2.0.14",
-    "vue": "^3.2.25",
-    "vue-router": "4"
+    "pinia": "^2.1.6",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.3.3",
-    "autoprefixer": "^10.4.7",
-    "naive-ui": "^2.30.4",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.3",
-    "typescript": "^4.5.4",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "autoprefixer": "^10.4.14",
+    "naive-ui": "^2.34.4",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.1.6",
     "vfonts": "^0.0.3",
-    "vite": "^2.9.9",
-    "vue-tsc": "^0.34.7"
+    "vite": "^4.4.7",
+    "vue-tsc": "^1.8.8"
   }
 }
