--- a/config.default.yml
+++ b/config.default.yml
@@ -8,10 +8,18 @@ dbTablePrefix:
 author: lilonghe
 authorLink: https://www.lilonghe.net
 
-# 网站建立事件
+# 网站建立时间
 siteBegin: 2016-12-19 21:31:43
 
 # 存储目录
 uploadPath: /var/www/upload
 # URL 访问路径
 uploadAccessPath: /static/upload
+
+# CDN 地址
+cdnHost: 
+# 网站地址
+host: 
+
+# 启用管理面板
+enableAdmin: false
