--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,12 +1,16 @@
 FROM golang:1.20-alpine as builder
 
 WORKDIR /app
-COPY . .  
+COPY go.* ./
+RUN go env -w GOPROXY=https://goproxy.cn,direct
+RUN go mod download
 
-RUN go mod tidy && go build -o server
+COPY pkg ./pkg
+COPY main.go ./
+RUN go build -o server
 
 FROM alpine:latest
 WORKDIR /app
-COPY --from=builder /app ./
+COPY --from=builder /app/server ./
 
 ENTRYPOINT ["./server"]
